--- a/blocks/images/images.css
+++ b/blocks/images/images.css
@@ -1,102 +1,112 @@
 main .images {
-    margin: 40px 0;
+  margin: 40px 0;
 }
 
 main .images .figure {
-    margin-top: 16px;
-    margin-bottom: 16px;
-    line-height: 0;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  line-height: 0;
+  text-align: center;
 }
 
 @media (min-width: 700px) {
-    main .images .figure {
-        margin: 0 auto;
-        max-width: 800px;
-    }
+  main .images .figure {
+    margin: 0 auto;
+    max-width: 800px;
+  }
 }
 
 main .images .figure img {
-    width: 100%;
+  width: 100%;
+}
+
+@media (min-width: 600px) {
+  main .images .figure img {
+    min-width: 600px;
+  }
 }
 
 main .images .figure .caption {
-    padding-left: 2rem;
-    padding-right: 2rem;
-    margin: 0;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin: 0;
 }
 
 @media (min-width: 700px) {
-    main .images .figure .caption {
-        max-width: 600px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}     
+  main .images .figure .caption {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 
 @media (min-width: 900px) {
-    main .images .figure .caption {
-        max-width: unset;
-        padding: 0;
-    }
+  main .images .figure .caption {
+    max-width: unset;
+    padding: 0;
+  }
 }
 
 main .images-list {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 600px) {
-    main .images-list {
-        flex-direction: row;
-        margin-right: 32px;
-        margin-left: 32px;
-    }
+  main .images-list {
+    flex-direction: row;
+    margin-right: 32px;
+    margin-left: 32px;
+  }
 }
 
 @media (min-width: 700px) {
-    main .images-list {
-        margin: 0 auto;
-        max-width: 800px;
-    }
+  main .images-list {
+    margin: 0 auto;
+    max-width: 800px;
+  }
 }
 
 main .images-list .figure {
-    box-sizing: border-box;
-    display: inline-block;
+  box-sizing: border-box;
+  display: inline-block;
 }
 
 @media (min-width: 600px) {
-    main .images-list-2 .figure {
-        margin: 0;
-        width: calc(100%/2 - 16px);
-    }
-    
-    main .images-list-2 .figure:last-of-type {
-        margin-left: 32px;
-    }
+  main .images-list-2 .figure {
+    margin: 0;
+    width: calc(100%/2 - 16px);
+  }
+  main .images-list-2 .figure:last-of-type {
+    margin-left: 32px;
+  }
 }
 
 @media (min-width: 600px) {
-    main .images-list-3 .figure {
-        margin: 0;
-        width: calc(100%/3 - 22px);
-    }
+  main .images-list-3 .figure {
+    margin: 0;
+    width: calc(100%/3 - 22px);
+  }
+  main .images-list-3 .figure:nth-of-type(2) {
+    margin-right: 32px;
+    margin-left: 32px;
+  }
+}
 
-    main .images-list-3 .figure:nth-of-type(2) {
-        margin-right: 32px;
-        margin-left: 32px;
-    }
+main .images-list .figure img {
+  width: 100%;
+  min-width: unset;
 }
 
 @media (min-width: 700px) {
-    main .images-list .figure .caption {
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
+  main .images-list .figure .caption {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 
 @media (min-width: 900px) {
-    main .images-list .figure .caption {
-        padding: 0;
-    }
+  main .images-list .figure .caption {
+    padding: 0;
+  }
 }
